[tool.poetry]
name = "blackcat"
version = "0.1.2"
description = "Library for interacting with Proxy Providers"
authors = ["draew6"]
packages = [{ include = "blackcat" }]
requires-python = ">=3.13"

[tool.poetry.dependencies]
python = ">=3.13"
pydantic = ">=2.11,<3.0.0"
httpx = ">0.28,<1.0.0"
httpx-retries = ">=0.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"